EShop/EShop.Web/service.yml
apiVersion: v1
kind: Service
metadata:
  name: eshop
spec:
  type: LoadBalancer
  ports:
  - port: 5000
  selector:
    app: eshop
