EShop/EShop.Web/ingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: eshop
  labels: 
    app: eshop
    system: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      host: api.eshop.com
      paths:
      - path: .
        backend:
          serviceName: eshop
          servicePort: 80
